err.txt
make: Circular servidor <- servidor dependency dropped.
server/servidor.cpp: In function ‘void signalHandler(int)’:
server/servidor.cpp:11:24: warning: unused parameter ‘signum’ [-Wunused-parameter]
   11 | void signalHandler(int signum) {
      |                    ~~~~^~~~~~
common/utils.cpp: In function ‘bool isValidPort(uint16_t)’:
common/utils.cpp:37:33: warning: comparison is always true due to limited range of data type [-Wtype-limits]
   37 |     return port >= 1024 && port <= 65535;
      |                            ~~~~~^~~~~~~~
common/utils.cpp: In function ‘bool isValidTransferValue(uint32_t)’:
common/utils.cpp:41:18: warning: comparison of unsigned expression in ‘>= 0’ is always true [-Wtype-limits]
   41 |     return value >= 0 && value <= 999999;
      |            ~~~~~~^~~~
make: Circular cliente <- cliente dependency dropped.
client/client_processor.cpp: In member function ‘void ClientProcessor::request(const std::string&, int)’:
client/client_processor.cpp:82:29: warning: comparison of integer expressions of different signedness: ‘uint32_t’ {aka ‘unsigned int’} and ‘int’ [-Wsign-compare]
   82 |                     if(seqn == current_id){
      |                        ~~~~~^~~~~~~~~~~~~
client/client_processor.cpp:88:54: error: no match for ‘operator=’ (operand types are ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} and ‘sockaddr_in’)
   88 |                         response_message.server_ip = server_addr;//server_ip;
      |                                                      ^~~~~~~~~~~
In file included from /usr/include/c++/13/string:54,
                 from client/client_processor.h:5,
                 from client/client_processor.cpp:1:
/usr/include/c++/13/bits/basic_string.h:936:8: note: candidate: ‘template<class _Tp> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  936 |        operator=(const _Tp& __svt)
      |        ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:936:8: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/13/ratio:39,
                 from /usr/include/c++/13/bits/chrono.h:37,
                 from /usr/include/c++/13/condition_variable:40,
                 from client/client_processor.h:4:
/usr/include/c++/13/type_traits: In substitution of ‘template<bool _Cond, class _Tp> using std::enable_if_t = typename std::enable_if::type [with bool _Cond = false; _Tp = std::__cxx11::basic_string<char>&]’:
/usr/include/c++/13/bits/basic_string.h:144:8:   required by substitution of ‘template<class _CharT, class _Traits, class _Alloc> template<class _Tp, class _Res> using std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv = std::enable_if_t<std::__and_<std::is_convertible<const _Tp&, std::basic_string_view<_CharT, _Traits> >, std::__not_<std::is_convertible<const _Tp*, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>*> >, std::__not_<std::is_convertible<const _Tp&, const _CharT*> > >::value, _Res> [with _Tp = sockaddr_in; _Res = std::__cxx11::basic_string<char>&; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
/usr/include/c++/13/bits/basic_string.h:936:8:   required by substitution of ‘template<class _Tp> std::__cxx11::basic_string<char>::_If_sv<_Tp, std::__cxx11::basic_string<char>&> std::__cxx11::basic_string<char>::operator=(const _Tp&) [with _Tp = sockaddr_in]’
client/client_processor.cpp:88:54:   required from here
/usr/include/c++/13/type_traits:2610:11: error: no type named ‘type’ in ‘struct std::enable_if<false, std::__cxx11::basic_string<char>&>’
 2610 |     using enable_if_t = typename enable_if<_Cond, _Tp>::type;
      |           ^~~~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:812:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  812 |       operator=(const basic_string& __str)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:812:37: note:   no known conversion for argument 1 from ‘sockaddr_in’ to ‘const std::__cxx11::basic_string<char>&’
  812 |       operator=(const basic_string& __str)
      |                 ~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:823:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  823 |       operator=(const _CharT* __s)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:823:31: note:   no known conversion for argument 1 from ‘sockaddr_in’ to ‘const char*’
  823 |       operator=(const _CharT* __s)
      |                 ~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/basic_string.h:835:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  835 |       operator=(_CharT __c)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:835:24: note:   no known conversion for argument 1 from ‘sockaddr_in’ to ‘char’
  835 |       operator=(_CharT __c)
      |                 ~~~~~~~^~~
/usr/include/c++/13/bits/basic_string.h:853:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  853 |       operator=(basic_string&& __str)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:853:32: note:   no known conversion for argument 1 from ‘sockaddr_in’ to ‘std::__cxx11::basic_string<char>&&’
  853 |       operator=(basic_string&& __str)
      |                 ~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:921:7: note: candidate: ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
  921 |       operator=(initializer_list<_CharT> __l)
      |       ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:921:42: note:   no known conversion for argument 1 from ‘sockaddr_in’ to ‘std::initializer_list<char>’
  921 |       operator=(initializer_list<_CharT> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~^~~
make: *** [Makefile:79: obj/client_client_processor.o] Error 1
